// Vitest Snapshot v1

exports[`<RemoveModal /> > should render 1`] = `
<Modal
  color="red"
  label="Remove"
  onHide={[MockFunction spy]}
  show={true}
  size="sm"
>
  <ModalHeader>
    Remove bar
  </ModalHeader>
  <RemoveModal__RemoveModalBody>
    <span>
      Are you sure you want to remove 
      <strong>
        Foo
      </strong>
      ?
    </span>
  </RemoveModal__RemoveModalBody>
  <ModalFooter>
    <Button
      color="red"
      icon="check"
      onClick={[MockFunction spy]}
    >
      Confirm
    </Button>
  </ModalFooter>
</Modal>
`;

exports[`<RemoveModal /> > should render when [show=false] 1`] = `
<Modal
  color="red"
  label="Remove"
  onHide={[MockFunction spy]}
  show={false}
  size="sm"
>
  <ModalHeader>
    Remove bar
  </ModalHeader>
  <RemoveModal__RemoveModalBody>
    <span>
      Are you sure you want to remove 
      <strong>
        Foo
      </strong>
      ?
    </span>
  </RemoveModal__RemoveModalBody>
  <ModalFooter>
    <Button
      color="red"
      icon="check"
      onClick={[MockFunction spy]}
    >
      Confirm
    </Button>
  </ModalFooter>
</Modal>
`;

exports[`<RemoveModal /> > should render with message 1`] = `
<Modal
  color="red"
  label="Remove"
  onHide={[MockFunction spy]}
  show={true}
  size="sm"
>
  <ModalHeader>
    Remove bar
  </ModalHeader>
  <RemoveModal__RemoveModalBody>
    Are you sure about this?
  </RemoveModal__RemoveModalBody>
  <ModalFooter>
    <Button
      color="red"
      icon="check"
      onClick={[MockFunction spy]}
    >
      Confirm
    </Button>
  </ModalFooter>
</Modal>
`;
